# Meeting-Workbook-Generator

./: .gitignore  MyScrapper.py  README.md  __main__.py  __main__.py.py  assignments_for_may.txt  index.html  main.py  pyproject.toml  requirements.txt  web_scrapper.py
GeneratedDocs/: Akeja Meeting Schedule July-August 2025.docx  Akeja Meeting Schedule March-April 2025.docx  Akeja Meeting Schedule May-June 2025.docx  Akeja Meeting Schedule November-December 2024.docx  Demo.docx  Demo1.docx  Life and Ministry Meeting Workbook—2026.docx  Our Christian Life and Ministry—Meeting Workbook, January-February 2025.docx  Our Christian Life and Ministry—Meeting Workbook, January-February 2026.docx  Our Christian Life and Ministry—Meeting Workbook, July-August 2025.docx  Our Christian Life and Ministry—Meeting Workbook, March-April 2025.docx  Our Christian Life and Ministry—Meeting Workbook, March-April 2026.docx  Our Christian Life and Ministry—Meeting Workbook, May-June 2025.docx  Our Christian Life and Ministry—Meeting Workbook, May-June 2026.docx  Our Christian Life and Ministry—Meeting Workbook, November-December 2025.docx  Our Christian Life and Ministry—Meeting Workbook, September-October 2025.docx
